--- a/src/main/resources/prova.fxml
+++ b/src/main/resources/prova.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GuiController">
+<BorderPane prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.ares.gui.GuiController">
    <top>
       <HBox alignment="CENTER" prefHeight="124.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
