--- a/src/main/resources/scene2.fxml
+++ b/src/main/resources/scene2.fxml
@@ -1,6 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" />
+<BorderPane prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.ares.gui.GuiController">
+   <top>
+      <HBox alignment="CENTER" prefHeight="111.0" prefWidth="1200.0" BorderPane.alignment="CENTER" />
+   </top>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="110.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="btnStop" mnemonicParsing="false" onAction="#btnStoplicked" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: red;" text="STOP">
+               <HBox.margin>
+                  <Insets bottom="30.0" left="50.0" top="30.0" />
+               </HBox.margin>
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnPause" alignment="CENTER" mnemonicParsing="false" onAction="#btnPauseClicked" prefHeight="200.0" prefWidth="200.0" text="PAUSE">
+               <HBox.margin>
+                  <Insets bottom="30.0" left="50.0" right="10.0" top="30.0" />
+               </HBox.margin>
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnRestart" alignment="CENTER" mnemonicParsing="false" onAction="#btnRestartClicked" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightgreen;" text="RESTART">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <HBox.margin>
+                  <Insets bottom="30.0" left="50.0" right="10.0" top="30.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+   </bottom>
+   <center>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-border-color: gray;" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane fx:id="gridPaneMap" maxHeight="538.0" maxWidth="639.0" minHeight="514.0" minWidth="639.0" prefHeight="538.0" prefWidth="639.0" style="-fx-background-color: gray;">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </GridPane>
+         </children>
+      </HBox>
+   </center>
+</BorderPane>
