--- a/src/main/resources/scene2.fxml
+++ b/src/main/resources/scene2.fxml
@@ -3,15 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.ares.gui.GuiController">
+<BorderPane prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.ares.gui.GuiSecondController">
    <top>
-      <HBox alignment="CENTER" prefHeight="111.0" prefWidth="1200.0" BorderPane.alignment="CENTER" />
+      <HBox alignment="CENTER" prefHeight="0.0" prefWidth="1200.0" BorderPane.alignment="CENTER" />
    </top>
    <bottom>
       <HBox alignment="CENTER" prefHeight="110.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
@@ -44,21 +43,12 @@
       </HBox>
    </bottom>
    <center>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-border-color: gray;" BorderPane.alignment="CENTER">
+      <HBox fx:id="hboxGrid" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-border-color: gray;" BorderPane.alignment="CENTER">
          <children>
-            <GridPane fx:id="gridPaneMap" maxHeight="538.0" maxWidth="639.0" minHeight="514.0" minWidth="639.0" prefHeight="538.0" prefWidth="639.0" style="-fx-background-color: gray;">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
+            <GridPane fx:id="grid">
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
-               <HBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </HBox.margin>
             </GridPane>
          </children>
       </HBox>
