--- a/src/main/resources/scene1.fxml
+++ b/src/main/resources/scene1.fxml
@@ -9,7 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="820.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.ares.gui.GuiController">
+<BorderPane prefHeight="820.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21"
+   xmlns:fx="http://javafx.com/fxml/1"
+   fx:controller="it.unibo.ares.gui.controller.FirstGuiController">
    <top>
       <HBox alignment="CENTER" prefHeight="80.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
@@ -45,7 +47,9 @@
    <bottom>
       <HBox alignment="CENTER" prefHeight="110.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnInitialize" mnemonicParsing="false" onAction="#btnInitializeClicked" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: LIGHTGREEN;" text="INIZIALIZZA MODELLO">
+            <Button fx:id="btnInitialize" mnemonicParsing="false" onAction="#btnInitializeClicked"
+               prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: LIGHTGREEN;"
+               text="INIZIALIZZA MODELLO">
                <font>
                   <Font size="16.0" />
                </font>
@@ -53,7 +57,9 @@
                   <Insets bottom="30.0" left="50.0" top="30.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnSetAgent" alignment="CENTER" mnemonicParsing="false" onAction="#btnSetAgentClicked" prefHeight="200.0" prefWidth="200.0" text="SET PARAMETRI AGENTE">
+            <Button fx:id="btnSetAgent" alignment="CENTER" mnemonicParsing="false"
+               onAction="#btnSetAgentClicked" prefHeight="200.0" prefWidth="200.0"
+               text="SET PARAMETRI AGENTE">
                <HBox.margin>
                   <Insets bottom="30.0" left="50.0" right="10.0" top="30.0" />
                </HBox.margin>
@@ -61,7 +67,9 @@
                   <Font size="16.0" />
                </font>
             </Button>
-            <Button fx:id="btnStart" mnemonicParsing="false" onAction="#btnStartClicked" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: GREEN;" text="START">
+            <Button fx:id="btnStart" mnemonicParsing="false" onAction="#btnStartClicked"
+               prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: GREEN;"
+               text="START">
                <HBox.margin>
                   <Insets bottom="30.0" left="50.0" top="30.0" />
                </HBox.margin>
@@ -73,7 +81,8 @@
       </HBox>
    </bottom>
    <center>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-border-color: gray;" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-border-color: gray;"
+         BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="100.0" prefWidth="500.0">
                <children>
