--- a/src/main/resources/scene2.fxml
+++ b/src/main/resources/scene2.fxml
@@ -9,11 +9,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.ares.gui.GuiSecondController">
+<BorderPane prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21"
+   xmlns:fx="http://javafx.com/fxml/1"
+   fx:controller="it.unibo.ares.gui.controller.SecondGuiController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="110.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnStop" mnemonicParsing="false" onAction="#btnStoplicked" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: red;" text="STOP">
+            <Button fx:id="btnStop" mnemonicParsing="false" onAction="#btnStoplicked"
+               prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: red;" text="STOP">
                <HBox.margin>
                   <Insets bottom="30.0" left="50.0" top="30.0" />
                </HBox.margin>
@@ -21,7 +24,8 @@
                   <Font size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btnPause" alignment="CENTER" mnemonicParsing="false" onAction="#btnPauseClicked" prefHeight="200.0" prefWidth="200.0" text="PAUSE">
+            <Button fx:id="btnPause" alignment="CENTER" mnemonicParsing="false"
+               onAction="#btnPauseClicked" prefHeight="200.0" prefWidth="200.0" text="PAUSE">
                <HBox.margin>
                   <Insets bottom="30.0" left="50.0" right="10.0" top="30.0" />
                </HBox.margin>
@@ -29,7 +33,9 @@
                   <Font size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btnRestart" alignment="CENTER" mnemonicParsing="false" onAction="#btnRestartClicked" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightgreen;" text="RESTART">
+            <Button fx:id="btnRestart" alignment="CENTER" mnemonicParsing="false"
+               onAction="#btnRestartClicked" prefHeight="200.0" prefWidth="200.0"
+               style="-fx-background-color: lightgreen;" text="RESTART">
                <font>
                   <Font size="20.0" />
                </font>
@@ -41,18 +47,21 @@
       </HBox>
    </bottom>
    <center>
-      <HBox fx:id="hboxGrid" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox fx:id="hboxGrid" alignment="CENTER" prefHeight="100.0" prefWidth="200.0"
+         BorderPane.alignment="CENTER">
          <children>
-            <GridPane fx:id="grid" gridLinesVisible="true" hgap="10.0" maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" vgap="10.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <GridPane fx:id="grid" gridLinesVisible="true" hgap="10.0" maxHeight="500.0"
+               maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0"
+               prefWidth="500.0" vgap="10.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
             </GridPane>
          </children>
       </HBox>
