--- a/src/main/resources/scene2.fxml
+++ b/src/main/resources/scene2.fxml
@@ -2,21 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21"
-   xmlns:fx="http://javafx.com/fxml/1"
-   fx:controller="it.unibo.ares.gui.controller.SecondGuiController">
+<BorderPane fx:id="borderPane" prefHeight="750.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.ares.gui.controller.SecondGuiController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="110.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnStop" mnemonicParsing="false" onAction="#btnStoplicked"
-               prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: red;" text="STOP">
+            <Button fx:id="btnStop" mnemonicParsing="false" onAction="#btnStoplicked" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: red;" text="STOP">
                <HBox.margin>
                   <Insets bottom="30.0" left="50.0" top="30.0" />
                </HBox.margin>
@@ -24,8 +19,7 @@
                   <Font size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btnPause" alignment="CENTER" mnemonicParsing="false"
-               onAction="#btnPauseClicked" prefHeight="200.0" prefWidth="200.0" text="PAUSE">
+            <Button fx:id="btnPause" alignment="CENTER" mnemonicParsing="false" onAction="#btnPauseClicked" prefHeight="200.0" prefWidth="200.0" text="PAUSE">
                <HBox.margin>
                   <Insets bottom="30.0" left="50.0" right="10.0" top="30.0" />
                </HBox.margin>
@@ -33,9 +27,7 @@
                   <Font size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btnRestart" alignment="CENTER" mnemonicParsing="false"
-               onAction="#btnRestartClicked" prefHeight="200.0" prefWidth="200.0"
-               style="-fx-background-color: lightgreen;" text="RESTART">
+            <Button fx:id="btnRestart" alignment="CENTER" mnemonicParsing="false" onAction="#btnRestartClicked" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: lightgreen;" text="RESTART">
                <font>
                   <Font size="20.0" />
                </font>
@@ -44,26 +36,12 @@
                </HBox.margin>
             </Button>
          </children>
+         <BorderPane.margin>
+            <Insets top="10.0" />
+         </BorderPane.margin>
       </HBox>
    </bottom>
    <center>
-      <HBox fx:id="hboxGrid" alignment="CENTER" prefHeight="100.0" prefWidth="200.0"
-         BorderPane.alignment="CENTER">
-         <children>
-            <GridPane fx:id="grid" gridLinesVisible="true" hgap="10.0" maxHeight="500.0"
-               maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0"
-               prefWidth="500.0" vgap="10.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-            </GridPane>
-         </children>
-      </HBox>
+      <AnchorPane fx:id="anchorPane" maxHeight="600.0" maxWidth="600.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
