working on gui event handler

--- a/gui/src/main/resources/scene1.fxml
+++ b/gui/src/main/resources/scene1.fxml
@@ -47,7 +47,7 @@
    <bottom>
       <HBox alignment="CENTER" prefHeight="110.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnInitialize" mnemonicParsing="false" onAction="#btnInitializeClicked"
+            <Button fx:id="btnInitialize" mnemonicParsing="false"
                prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: LIGHTGREEN;"
                text="INIZIALIZZA MODELLO">
                <font>
@@ -58,7 +58,7 @@
                </HBox.margin>
             </Button>
             <Button fx:id="btnSetAgent" alignment="CENTER" mnemonicParsing="false"
-               onAction="#btnSetAgentClicked" prefHeight="200.0" prefWidth="200.0"
+               prefHeight="200.0" prefWidth="200.0"
                text="SET PARAMETRI AGENTE">
                <HBox.margin>
                   <Insets bottom="30.0" left="50.0" right="10.0" top="30.0" />
@@ -67,7 +67,7 @@
                   <Font size="16.0" />
                </font>
             </Button>
-            <Button fx:id="btnStart" mnemonicParsing="false" onAction="#btnStartClicked"
+            <Button fx:id="btnStart" mnemonicParsing="false"
                prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: GREEN;"
                text="START">
                <HBox.margin>
