--- a/gui/src/main/resources/scene2.fxml
+++ b/gui/src/main/resources/scene2.fxml
@@ -2,9 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="borderPane" prefHeight="799.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unibo.ares.gui.controller.SecondGuiController">
@@ -44,4 +47,20 @@
    <center>
       <AnchorPane fx:id="anchorPane" maxHeight="655.0" maxWidth="655.0" minHeight="655.0" minWidth="655.0" prefHeight="655.0" prefWidth="655.0" BorderPane.alignment="CENTER" />
    </center>
+   <left>
+      <VBox alignment="CENTER" prefHeight="678.0" prefWidth="202.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Step tra un tick e l'altro">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </Label>
+            <Slider fx:id="slidStep" blockIncrement="0.025" majorTickUnit="0.1" max="1.0" orientation="VERTICAL" prefHeight="331.0" prefWidth="45.0" showTickLabels="true" showTickMarks="true" />
+            <Label fx:id="lblStep" />
+         </children>
+      </VBox>
+   </left>
 </BorderPane>
